# SN-ANN

./: Bidirectionel-LSTM.ipynb  Data_exploration.ipynb  Dataset_creators.py  GRu.ipynb  app.py  best_bilstm_nflx.pth  best_gru_nflx.pth  pyproject.toml  requirements.txt
Data/: clean.csv
