[project]
name = "sn-ann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "yfinance>=1.1.0",
]
